<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="names"
            type="com.example.android.aboutme.Names" />
    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_padding"
        android:layout_marginRight="@dimen/margin_padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_text"
            style="@style/my_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{names.name}"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/nickname_edit"
            style="@style/my_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nickname_prompt"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <Button
            android:id="@+id/done_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_padding"
            android:fontFamily="@font/roboto"
            android:text="@string/done" />

        <TextView
            android:id="@+id/nickname_text"
            style="@style/my_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:visibility="gone"
            tools:text="sample text"
            tools:visibility="visible"
            android:text="@{names.nickname}"/>

        <ImageView
            android:id="@+id/star_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding"
            android:contentDescription="@string/star_image_description"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ScrollView
            android:id="@+id/bio_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/scroll_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/android_logo_description"
                    android:visibility="visible"
                    app:srcCompat="@android:drawable/sym_def_app_icon"
                    tools:srcCompat="@android:drawable/sym_def_app_icon"
                    tools:visibility="gone"></ImageView>

                <TextView
                    android:id="@+id/bio_text"
                    style="@style/my_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/bio_text_sample"></TextView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>